tests-integration/fixtures/checking/1772565780_derive_profunctor_error/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
WrongFirst ::
  forall (@a :: Type) (@b :: Type). (a :: Type) -> (b :: Type) -> WrongFirst (a :: Type) (b :: Type)
WrongSecond ::
  forall (@a :: Type) (@b :: Type).
    ((b :: Type) -> (a :: Type)) -> WrongSecond (a :: Type) (b :: Type)

Types
WrongFirst :: Type -> Type -> Type
WrongSecond :: Type -> Type -> Type

Derived
derive Profunctor WrongFirst
derive Profunctor WrongSecond

Roles
WrongFirst = [Representational, Representational]
WrongSecond = [Representational, Representational]

Diagnostics
error[CovariantOccurrence]: Type variable occurs in covariant position: (t :: Type)
  --> 6:1..6:38
  |
6 | derive instance Profunctor WrongFirst
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[ContravariantOccurrence]: Type variable occurs in contravariant position: (t1 :: Type)
  --> 9:1..9:39
  |
9 | derive instance Profunctor WrongSecond
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[CovariantOccurrence]: Type variable occurs in covariant position: (t2 :: Type)
  --> 9:1..9:39
  |
9 | derive instance Profunctor WrongSecond
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
